--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   mariadb:
-    image: "mariadb:10.10"
+    image: "mariadb:latest"
     restart: always
     ports:
       - "3306:3306"
