--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,9 @@ cors:
 
 aws:
   region: eu-central-1
+  accessKeyId: AKIAT2TKEXO3UOQMBDBJ
+  secretKey: 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
   s3:
     buckets:
       user: code212-user-code
+
