--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,8 +14,8 @@ cors:
 
 aws:
   region: eu-central-1
-  accessKeyId: AKIAT2TKEXO3UOQMBDBJ
-  secretKey: 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
+  accessKeyId: 
+  secretKey: 
   s3:
     buckets:
       user: code212-user-code
@@ -23,7 +23,7 @@ aws:
 
 openai:
   api:
-    key: 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
+    key: 
     url: https://api.openai.com/v1/chat/completions
   model: gpt-3.5-turbo
 
